--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 5000",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "prettier": "prettier --write ./{src,config}/**/*.{ts,tsx,js}"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -26,8 +25,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "devextreme": "19.2.6",
     "devextreme-angular": "^19.2.6",
-    "lodash": "^4.17.15",
-    "prettier": "1.19.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-localstorage": "^0.4.1",
@@ -39,13 +36,13 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.7",
+    "@angular-devkit/build-angular": "~0.900.7",
     "@angular/cli": "~9.0.7",
     "@angular/compiler-cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
+    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -54,7 +51,6 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "prettier": "2.0.5",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
